infra/networking/traefik/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "traefik.labber.mcmn.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # This Middleware ONLY works on HTTPRoutes
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: dashboard-auth
      backendRefs:
        - name: traefik
          port: 9000
